force-app/main/default/objects/Renewal_Risk_Raised__e/Renewal_Risk_Raised__e.object-meta.xml
<CustomObject>
    <description
  >Fired by renewal-risk assessment when a Contract is flagged at risk; drives CS escalation.</description>
    <label>Renewal Risk Raised</label>
    <pluralLabel>Renewal Risk Raised Events</pluralLabel>
</CustomObject>