force-app/main/default/objects/Renewal_Risk_Raised__e/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <description>Id of the at-risk Contract.</description>
    <label>Contract Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>