force-app/main/default/objects/Renewal_Risk_Raised__e/fields/Days_To_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Renewal__c</fullName>
    <description>Days remaining until the contract renewal date.</description>
    <label>Days To Renewal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>