force-app/main/default/objects/Renewal_Risk_Raised__e/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description
  >Assessed renewal risk level. Expected values: Low, Medium, High, Critical. (Platform-event fields cannot be Picklists, so this is Text with an enumerated convention.)</description>
    <label>Risk Level</label>
    <length>40</length>
    <type>Text</type>
</CustomField>